Optimized many features (#236)

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -3825,6 +3825,9 @@
         }
       }
     },
+    "UID: %@" : {
+
+    },
     "Update.checking" : {
       "localizations" : {
         "en" : {
@@ -4512,6 +4515,9 @@
         }
       }
     },
+    "二维码名片" : {
+
+    },
     "令枫" : {
       "localizations" : {
         "en" : {
@@ -4527,6 +4533,9 @@
           }
         }
       }
+    },
+    "动态" : {
+
     },
     "动态内容" : {
 
@@ -4605,6 +4614,9 @@
 
     },
     "我的收藏" : {
+
+    },
+    "手记建议" : {
 
     },
     "推荐" : {
