Gerenal bug fixes

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -47,6 +47,12 @@
             "value" : "_uuid_Gen"
           }
         },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "_uuid_Gen"
+          }
+        },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
@@ -58,6 +64,12 @@
     "-- And You --" : {
       "localizations" : {
         "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "-- And You --"
+          }
+        },
+        "ja" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "-- And You --"
