chore: Fixed issues(see issues page for details), added analyze(and privacy settings for it)

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -855,6 +855,9 @@
         }
       }
     },
+    "bMessagePatch" : {
+
+    },
     "buvid_fpTest" : {
       "localizations" : {
         "en" : {
@@ -4518,6 +4521,9 @@
     "什么都木有" : {
 
     },
+    "从关注列表中移除" : {
+
+    },
     "令枫" : {
       "localizations" : {
         "en" : {
@@ -4533,6 +4539,9 @@
           }
         }
       }
+    },
+    "允许收集使用信息" : {
+
     },
     "全屏" : {
 
@@ -4570,6 +4579,21 @@
     "启用" : {
 
     },
+    "启用通知" : {
+
+    },
+    "喵哩喵哩" : {
+
+    },
+    "喵哩喵哩为完整开源项目，欢迎检查代码以确认无隐私问题" : {
+
+    },
+    "喵哩喵哩开源页" : {
+
+    },
+    "喵哩喵哩收集使用信息仅用以帮助改进质量，不会用于广告、个人画像之类，收集的信息不会关联到个人。此更改立即生效，不会影响哔哩哔哩官方对您的数据收集。" : {
+
+    },
     "在使用本 App 前，您需要先知晓以下信息：\n· 本 App 由第三方开发者以及部分社区用户贡献，与哔哩哔哩无合作关系，哔哩哔哩是上海宽娱数码科技有限公司的商标。\n· 本 App 并不是哔哩哔哩的替代品，我们建议您在能够使用官方客户端时尽量使用官方客户端。\n· 本 App 均使用来源于网络的公开信息进行开发。\n· 本 App 中和B站相关的功能完全免费\n· 本 App 中所呈现的B站内容来自哔哩哔哩官方。\n· 本 App 的开发者、负责人和实际责任人是%@\n  联系QQ：3245146430" : {
       "localizations" : {
         "en" : {
@@ -4586,6 +4610,9 @@
         }
       }
     },
+    "声音与触感" : {
+
+    },
     "复制" : {
 
     },
@@ -4593,6 +4620,9 @@
 
     },
     "字号" : {
+
+    },
+    "完成" : {
 
     },
     "将作为动态主体" : {
@@ -4629,6 +4659,9 @@
 
     },
     "手记建议" : {
+
+    },
+    "扩展的触感反馈" : {
 
     },
     "推荐" : {
@@ -4679,7 +4712,13 @@
     "经验" : {
 
     },
+    "编辑" : {
+
+    },
     "要使用动态小尾巴吗?" : {
+
+    },
+    "触感" : {
 
     },
     "记录历史记录" : {
@@ -4706,7 +4745,13 @@
     "选择文本" : {
 
     },
+    "通知" : {
+
+    },
     "重新载入" : {
+
+    },
+    "隐私与安全性" : {
 
     },
     "顶部" : {
