feat!: Added active page for iOS

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -145,6 +145,9 @@
         }
       }
     },
+    "· 本 App 由第三方开发者以及部分社区用户贡献，与哔哩哔哩无合作关系，哔哩哔哩是上海宽娱数码科技有限公司的商标。\n\n· 本 App 并不是哔哩哔哩的替代品，我们建议您在能够使用官方客户端时尽量使用官方客户端。\n\n· 本 App 均使用来源于网络的公开信息进行开发。\n\n· 本 App 中和B站相关的功能完全免费\n\n· 本 App 中所呈现的B站内容来自哔哩哔哩官方。\n\n· 本 App 的开发者、负责人和实际责任人是%@" : {
+
+    },
     "%@" : {
       "localizations" : {
         "en" : {
@@ -1376,6 +1379,9 @@
         }
       }
     },
+    "App 分析与隐私" : {
+
+    },
     "Bangumi" : {
       "localizations" : {
         "en" : {
@@ -1668,6 +1674,12 @@
           }
         }
       }
+    },
+    "Darock 功能请求使用您的个人信息时会出现此图标。" : {
+
+    },
+    "Darock 将隐私视作每个人的基本权利，因此所有 Darock 产品旨在收集和使用最少的用户数据，尽可能地使用本机处理，以及赋予用户对信息的知情权和控制权。" : {
+
     },
     "Darock-studio" : {
       "localizations" : {
@@ -7940,6 +7952,18 @@
         }
       }
     },
+    "下一步" : {
+
+    },
+    "不共享" : {
+
+    },
+    "不同意" : {
+
+    },
+    "与 Darock 共享" : {
+
+    },
     "二维码名片" : {
       "localizations" : {
         "en" : {
@@ -7997,6 +8021,12 @@
         }
       }
     },
+    "以及我们的用户须知" : {
+
+    },
+    "允许对您喵哩喵哩的使用数据进行分析，以帮助 Darock 改进产品和服务，您可以稍后在喵哩喵哩内的“设置”中更改您的决定。" : {
+
+    },
     "允许收集使用信息" : {
 
     },
@@ -8022,6 +8052,9 @@
         }
       }
     },
+    "关于 App 分析与隐私..." : {
+
+    },
     "内容" : {
       "localizations" : {
         "zh-Hant" : {
@@ -8031,6 +8064,9 @@
           }
         }
       }
+    },
+    "分析旨在保护你的信息并可让你选择要共享的内容。" : {
+
     },
     "动态" : {
       "localizations" : {
@@ -8218,6 +8254,12 @@
         }
       }
     },
+    "同意" : {
+
+    },
+    "向上轻扫以开始" : {
+
+    },
     "启用" : {
       "localizations" : {
         "en" : {
@@ -8240,6 +8282,12 @@
     "喵哩喵哩" : {
 
     },
+    "喵哩喵哩 App 分析\n\n喵哩喵哩分析可能会包括硬件和操作系统规格方面的详细信息、性能统计数据，以及应用程序的使用数据。此类信息用于帮助 Darock 改善和开发其产品和服务。任何被收集的信息都无法用来识别你的身份。个人数据或是根本不会被记录，或是受隐私保护技术的约束，或是在发送给 Darock 前就已从报告中移除。你可以在喵哩喵哩个人页中前往“设置”>“隐私与安全性”>，然后轻点“分析数据”来查看此类信息。\n\n你也可以选择完全停用“喵哩喵哩 App 分析”共享。若要停用，请前往“设置”>“隐私与安全性”，然后轻点以关闭“允许收集使用信息”。如果拥有与iPhone配对的Apple Watch，则可在Apple Watch上执行相同操作。\n\n使用这些功能即表示你同意和允许 Darock 及代理机构按上述条件传输、收集、维护、处理和使用这些信息。\n\nDarock 收集的信息始终会遵照 Darock 的“隐私政策”处理，其内容可参阅https://darock.top/meowbili/privacy" : {
+
+    },
+    "喵哩喵哩 分析" : {
+
+    },
     "喵哩喵哩为完整开源项目，欢迎检查代码以确认无隐私问题" : {
 
     },
@@ -8249,7 +8297,14 @@
     "喵哩喵哩收集使用信息仅用以帮助改进质量，不会用于广告、个人画像之类，收集的信息不会关联到个人。此更改立即生效，不会影响哔哩哔哩官方对您的数据收集。" : {
 
     },
+    "在使用前，您需要先同意喵哩喵哩的隐私政策" : {
+
+    },
+    "在使用本 App 前，您需要先知晓以下信息：\n· 本 App 由第三方开发者以及部分社区用户贡献，与哔哩哔哩无合作关系，哔哩哔哩是上海宽娱数码科技有限公司的商标。\n· 本 App 并不是哔哩哔哩的替代品，我们建议您在能够使用官方客户端时尽量使用官方客户端。\n· 本 App 均使用来源于网络的公开信息进行开发。\n· 本 App 中和B站相关的功能完全免费\n· 本 App 中所呈现的B站内容来自哔哩哔哩官方。\n· 本 App 的开发者、负责人和实际责任人是%@" : {
+
+    },
     "在使用本 App 前，您需要先知晓以下信息：\n· 本 App 由第三方开发者以及部分社区用户贡献，与哔哩哔哩无合作关系，哔哩哔哩是上海宽娱数码科技有限公司的商标。\n· 本 App 并不是哔哩哔哩的替代品，我们建议您在能够使用官方客户端时尽量使用官方客户端。\n· 本 App 均使用来源于网络的公开信息进行开发。\n· 本 App 中和B站相关的功能完全免费\n· 本 App 中所呈现的B站内容来自哔哩哔哩官方。\n· 本 App 的开发者、负责人和实际责任人是%@\n  联系QQ：3245146430" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -8389,6 +8444,9 @@
         }
       }
     },
+    "并非所有功能都会出现此图标，因为 Darock 仅当需要启用功能，保护服务的安全或个性化您的使用体验时才会收集此信息。" : {
+
+    },
     "应用" : {
       "localizations" : {
         "en" : {
@@ -8503,6 +8561,9 @@
         }
       }
     },
+    "我已了解" : {
+
+    },
     "我的收藏" : {
       "localizations" : {
         "en" : {
@@ -8524,6 +8585,9 @@
           }
         }
       }
+    },
+    "所有数据的收集均受隐私保护技术的保护，且不与您或您的账户关联。" : {
+
     },
     "手记建议" : {
       "localizations" : {
@@ -8559,6 +8623,9 @@
           }
         }
       }
+    },
+    "数据与隐私" : {
+
     },
     "文本加载失败" : {
       "localizations" : {
@@ -8722,6 +8789,12 @@
         }
       }
     },
+    "欢迎使用喵哩喵哩" : {
+
+    },
+    "欢迎来到喵哩喵哩" : {
+
+    },
     "清除所有已观看视频" : {
       "localizations" : {
         "en" : {
@@ -8804,6 +8877,9 @@
         }
       }
     },
+    "稍后登录" : {
+
+    },
     "稿件" : {
       "localizations" : {
         "ja" : {
@@ -8841,6 +8917,9 @@
           }
         }
       }
+    },
+    "继续" : {
+
     },
     "编辑" : {
 
@@ -8946,6 +9025,9 @@
         }
       }
     },
+    "账号" : {
+
+    },
     "超大" : {
       "localizations" : {
         "en" : {
@@ -9023,6 +9105,9 @@
       }
     },
     "通知" : {
+
+    },
+    "通过哔哩哔哩登录" : {
 
     },
     "重新载入" : {
