--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -1666,6 +1666,9 @@
         }
       }
     },
+    "Darock 会收集必要的诊断信息以便进行改进，信息不会关联到您个人。如果您不愿意被收集信息，请勿发送。" : {
+
+    },
     "Darock-studio" : {
       "localizations" : {
         "en" : {
@@ -3118,6 +3121,9 @@
           }
         }
       }
+    },
+    "ID: %@" : {
+
     },
     "Lightning-Lion" : {
       "localizations" : {
@@ -8136,6 +8142,12 @@
         }
       }
     },
+    "反馈助理" : {
+
+    },
+    "反馈类型" : {
+
+    },
     "发布于 %@" : {
       "localizations" : {
         "en" : {
@@ -8157,6 +8169,9 @@
           }
         }
       }
+    },
+    "发送" : {
+
     },
     "发送动态" : {
       "localizations" : {
@@ -8195,6 +8210,9 @@
           }
         }
       }
+    },
+    "发送的反馈" : {
+
     },
     "可选, 最多9个" : {
       "localizations" : {
@@ -8247,6 +8265,15 @@
 
     },
     "喵哩喵哩收集使用信息仅用以帮助改进质量，不会用于广告、个人画像之类，收集的信息不会关联到个人。此更改立即生效，不会影响哔哩哔哩官方对您的数据收集。" : {
+
+    },
+    "回复 %lld" : {
+
+    },
+    "回复内容" : {
+
+    },
+    "在App内反馈" : {
 
     },
     "在使用本 App 前，您需要先知晓以下信息：\n· 本 App 由第三方开发者以及部分社区用户贡献，与哔哩哔哩无合作关系，哔哩哔哩是上海宽娱数码科技有限公司的商标。\n· 本 App 并不是哔哩哔哩的替代品，我们建议您在能够使用官方客户端时尽量使用官方客户端。\n· 本 App 均使用来源于网络的公开信息进行开发。\n· 本 App 中和B站相关的功能完全免费\n· 本 App 中所呈现的B站内容来自哔哩哔哩官方。\n· 本 App 的开发者、负责人和实际责任人是%@\n  联系QQ：3245146430" : {
@@ -8421,6 +8448,9 @@
         }
       }
     },
+    "建议" : {
+
+    },
     "开启“屏幕使用时间”" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -8580,6 +8610,9 @@
         }
       }
     },
+    "新建反馈" : {
+
+    },
     "显示底部弹幕" : {
       "localizations" : {
         "en" : {
@@ -8662,6 +8695,9 @@
         }
       }
     },
+    "来自" : {
+
+    },
     "极大" : {
       "localizations" : {
         "en" : {
@@ -8710,6 +8746,9 @@
         }
       }
     },
+    "标题" : {
+
+    },
     "模式" : {
       "localizations" : {
         "en" : {
@@ -8747,6 +8786,9 @@
           }
         }
       }
+    },
+    "状态" : {
+
     },
     "画面" : {
       "localizations" : {
@@ -8823,6 +8865,12 @@
           }
         }
       }
+    },
+    "简洁地描述问题" : {
+
+    },
+    "类型" : {
+
     },
     "经验" : {
       "localizations" : {
@@ -9050,6 +9098,9 @@
           }
         }
       }
+    },
+    "错误/异常行为" : {
+
     },
     "隐私与安全性" : {
 
