feat(AboutView): Added channel text

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -257,6 +257,9 @@
         }
       }
     },
+    "%@ Channel" : {
+
+    },
     "%@ 人在看" : {
       "localizations" : {
         "en" : {
@@ -344,6 +347,9 @@
           }
         }
       }
+    },
+    "%@ 频道" : {
+
     },
     "%@MB / %@MB" : {
       "localizations" : {
