fix&feat: Fixed new video cover old video issue when download video with part. Added FileLocker

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -257,9 +257,6 @@
         }
       }
     },
-    "%@ Channel" : {
-
-    },
     "%@ 人在看" : {
       "localizations" : {
         "en" : {
@@ -7952,6 +7949,12 @@
         }
       }
     },
+    "上一小时" : {
+
+    },
+    "下一步" : {
+
+    },
     "二维码名片" : {
       "localizations" : {
         "en" : {
@@ -7984,6 +7987,9 @@
         }
       }
     },
+    "今天" : {
+
+    },
     "从关注列表中移除" : {
 
     },
@@ -8008,6 +8014,9 @@
           }
         }
       }
+    },
+    "使用恢复密钥" : {
+
     },
     "允许收集使用信息" : {
 
@@ -8043,6 +8052,9 @@
           }
         }
       }
+    },
+    "分析与改进" : {
+
     },
     "动态" : {
       "localizations" : {
@@ -8364,6 +8376,9 @@
     "完成" : {
 
     },
+    "密码" : {
+
+    },
     "将作为动态主体" : {
       "localizations" : {
         "zh-Hant" : {
@@ -8518,6 +8533,9 @@
         }
       }
     },
+    "恢复密钥" : {
+
+    },
     "您可以更改默认的小尾巴内容, 如果不想添加小尾巴, 请清空上方文本框内容. 您可以随时在设置中更改此内容" : {
       "localizations" : {
         "en" : {
@@ -8562,6 +8580,9 @@
         }
       }
     },
+    "所有历史记录" : {
+
+    },
     "手记建议" : {
       "localizations" : {
         "zh-Hant" : {
@@ -8600,6 +8621,22 @@
     "搜索" : {
 
     },
+    "文件保险箱" : {
+
+    },
+    "文件保险箱已启用" : {
+
+    },
+    "文件保险箱通过对喵哩喵哩进行加密来保护 App 内的数据。\n\n警告：你将需要密码或恢复密钥才能访问数据。在此设置过程中，会自动生成恢复密钥。如果同时忘记了密码和恢复密钥，数据将会丢失。\n\n已%@喵哩喵哩的文件保险箱。%@" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "文件保险箱通过对喵哩喵哩进行加密来保护 App 内的数据。\n\n警告：你将需要密码或恢复密钥才能访问数据。在此设置过程中，会自动生成恢复密钥。如果同时忘记了密码和恢复密钥，数据将会丢失。\n\n已%1$@喵哩喵哩的文件保险箱。%2$@"
+          }
+        }
+      }
+    },
     "文本加载失败" : {
       "localizations" : {
         "en" : {
@@ -8617,6 +8654,9 @@
       }
     },
     "新建反馈" : {
+
+    },
+    "昨天和今天" : {
 
     },
     "显示底部弹幕" : {
@@ -8771,6 +8811,12 @@
         }
       }
     },
+    "正在加密..." : {
+
+    },
+    "清除历史记录" : {
+
+    },
     "清除所有已观看视频" : {
       "localizations" : {
         "en" : {
@@ -8792,6 +8838,9 @@
           }
         }
       }
+    },
+    "清除时间段" : {
+
     },
     "状态" : {
 
@@ -9004,6 +9053,9 @@
         }
       }
     },
+    "请将恢复密钥保存到安全的位置" : {
+
+    },
     "超大" : {
       "localizations" : {
         "en" : {
@@ -9035,6 +9087,9 @@
           }
         }
       }
+    },
+    "输入错误" : {
+
     },
     "选择图片" : {
       "localizations" : {
