rev: Reverted dynamic link detect because of UI issue

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -8644,6 +8644,7 @@
       }
     },
     "文本加载失败" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
