as: Updated for App Store, DO NOT merge

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -8235,6 +8235,9 @@
     "发送的反馈" : {
 
     },
+    "发送评论" : {
+
+    },
     "可选, 最多9个" : {
       "localizations" : {
         "en" : {
@@ -8276,19 +8279,10 @@
     "启用通知" : {
 
     },
-    "喵哩喵哩" : {
-
-    },
-    "喵哩喵哩为完整开源项目，欢迎检查代码以确认无隐私问题" : {
-
-    },
-    "喵哩喵哩开源页" : {
-
-    },
-    "喵哩喵哩收集使用信息仅用以帮助改进质量，不会用于广告、个人画像之类，收集的信息不会关联到个人。此更改立即生效，不会影响哔哩哔哩官方对您的数据收集。" : {
-
-    },
     "回复 %lld" : {
+
+    },
+    "回复信息" : {
 
     },
     "回复内容" : {
@@ -8633,12 +8627,12 @@
     "文件保险箱已启用" : {
 
     },
-    "文件保险箱通过对喵哩喵哩进行加密来保护 App 内的数据。\n\n警告：你将需要密码或恢复密钥才能访问数据。在此设置过程中，会自动生成恢复密钥。如果同时忘记了密码和恢复密钥，数据将会丢失。\n\n已%@喵哩喵哩的文件保险箱。%@" : {
+    "文件保险箱通过对暗礁流媒体进行加密来保护 App 内的数据。\n\n警告：你将需要密码或恢复密钥才能访问数据。在此设置过程中，会自动生成恢复密钥。如果同时忘记了密码和恢复密钥，数据将会丢失。\n\n已%@暗礁流媒体的文件保险箱。%@" : {
       "localizations" : {
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "new",
-            "value" : "文件保险箱通过对喵哩喵哩进行加密来保护 App 内的数据。\n\n警告：你将需要密码或恢复密钥才能访问数据。在此设置过程中，会自动生成恢复密钥。如果同时忘记了密码和恢复密钥，数据将会丢失。\n\n已%1$@喵哩喵哩的文件保险箱。%2$@"
+            "value" : "文件保险箱通过对暗礁流媒体进行加密来保护 App 内的数据。\n\n警告：你将需要密码或恢复密钥才能访问数据。在此设置过程中，会自动生成恢复密钥。如果同时忘记了密码和恢复密钥，数据将会丢失。\n\n已%1$@暗礁流媒体的文件保险箱。%2$@"
           }
         }
       }
@@ -8747,6 +8741,27 @@
           }
         }
       }
+    },
+    "暗礁流媒体" : {
+
+    },
+    "暗礁流媒体为完整开源项目，欢迎检查代码以确认无隐私问题" : {
+
+    },
+    "暗礁流媒体开源页" : {
+
+    },
+    "暗礁流媒体收集使用信息仅用以帮助改进质量，不会用于广告、个人画像之类，收集的信息不会关联到个人。此更改立即生效，不会影响哔哩哔哩官方对您的数据收集。" : {
+
+    },
+    "暗礁流媒体高度可自定义，您需要一个可用的服务器地址以供 App 获取视频等信息。\n\n您可以搭建自己的服务器，也可以在网络上查找符合 Darock Video Protocol 协议的公开服务器" : {
+
+    },
+    "更改将立即生效" : {
+
+    },
+    "服务器地址" : {
+
     },
     "来自" : {
 
@@ -8959,6 +8974,9 @@
     "编辑" : {
 
     },
+    "自建服务器帮助" : {
+
+    },
     "要使用动态小尾巴吗?" : {
       "localizations" : {
         "zh-Hant" : {
@@ -9063,6 +9081,9 @@
     "请将恢复密钥保存到安全的位置" : {
 
     },
+    "请确认您对您输入的链接拥有访问权限，视频内容由您输入的服务提供商提供，Darock 不对其内容负责" : {
+
+    },
     "超大" : {
       "localizations" : {
         "en" : {
@@ -9096,6 +9117,9 @@
       }
     },
     "输入错误" : {
+
+    },
+    "这是什么？" : {
 
     },
     "选择图片" : {
