--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -672,25 +672,25 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "MeowBili"
+            "value" : "Darock Stream"
           }
         },
         "ja" : {
           "stringUnit" : {
-            "state" : "translated",
+            "state" : "needs_review",
             "value" : "喵哩喵哩"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "喵哩喵哩"
+            "value" : "暗礁流媒体"
           }
         },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "喵哩喵哩"
+            "value" : "暗礁流媒体"
           }
         }
       }
@@ -2247,7 +2247,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "A fatal error occurred and caused Meowbili crash."
+            "value" : "A fatal error occurred and caused Darock Stream crash."
           }
         },
         "ja" : {
@@ -2459,25 +2459,25 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "MeowBili Occurred a Problem"
+            "value" : "Darock Stream Occurred a Problem"
           }
         },
         "ja" : {
           "stringUnit" : {
-            "state" : "translated",
+            "state" : "needs_review",
             "value" : "喵哩喵哩に問題が発生したようです。"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "喵哩喵哩似乎出现了问题"
+            "value" : "暗礁流媒体似乎出现了问题"
           }
         },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "喵哩喵哩似乎出現了問題"
+            "value" : "暗礁流媒体似乎出現了問題"
           }
         }
       }
@@ -4379,25 +4379,25 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Screen Time will record and count the time you use MeowBili"
+            "value" : "Screen Time will record and count the time you use Darock Stream"
           }
         },
         "ja" : {
           "stringUnit" : {
-            "state" : "translated",
+            "state" : "needs_review",
             "value" : "「スクリーン使用時間」は、あなたが毎日ミャオリミャオリを使う時間を記録し統計します。"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "“屏幕使用时间”会记录并统计您每天使用喵哩喵哩的时间"
+            "value" : "“屏幕使用时间”会记录并统计您每天使用暗礁流媒体的时间"
           }
         },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "\"屏幕使用時間\"會記錄並統計您每天使用喵哩喵哩的時間"
+            "value" : "\"屏幕使用時間\"會記錄並統計您每天使用暗礁流媒体的時間"
           }
         }
       }
@@ -5559,25 +5559,25 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili API"
+            "value" : "Stream API"
           }
         },
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili API"
+            "value" : "Stream API"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili API"
+            "value" : "Stream API"
           }
         },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili API"
+            "value" : "Stream API"
           }
         }
       }
@@ -5587,25 +5587,25 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili API: Available"
+            "value" : "Stream API: Available"
           }
         },
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili API：利用可能"
+            "value" : "Stream API：利用可能"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili API：可用"
+            "value" : "Stream API：可用"
           }
         },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili API：可用"
+            "value" : "Stream API：可用"
           }
         }
       }
@@ -5615,25 +5615,25 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili API: Checking"
+            "value" : "Stream API: Checking"
           }
         },
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili API：チェック中"
+            "value" : "Stream API：チェック中"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili API：正在检查"
+            "value" : "Stream API：正在检查"
           }
         },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili API：正在檢查"
+            "value" : "Stream API：正在檢查"
           }
         }
       }
@@ -5643,25 +5643,25 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili API: Unavailable"
+            "value" : "Stream API: Unavailable"
           }
         },
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili API：利用不可"
+            "value" : "Stream API：利用不可"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili APi：不可用"
+            "value" : "Stream APi：不可用"
           }
         },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili API：不可用"
+            "value" : "Stream API：不可用"
           }
         }
       }
@@ -6035,25 +6035,25 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili API Problems"
+            "value" : "Stream API Problems"
           }
         },
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili APIの問題"
+            "value" : "Stream APIの問題"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili API 问题"
+            "value" : "Stream API 问题"
           }
         },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili API 問題"
+            "value" : "Stream API 問題"
           }
         }
       }
@@ -6063,25 +6063,25 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Failed to connect to Bilibili server. Bilibili remote server maybe crashed."
+            "value" : "Failed to connect to remote server. Remote server maybe crashed."
           }
         },
         "ja" : {
           "stringUnit" : {
-            "state" : "translated",
+            "state" : "needs_review",
             "value" : "ビリビリサーバーに接続できません。おそらく、ビリビリサーバーがクラッシュした可能性があります。"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "无法连接至哔哩哔哩服务器，可能是哔哩哔哩服务器崩溃。"
+            "value" : "无法连接至远程服务器，可能是远程服务器崩溃。"
           }
         },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "無法連接至哔哩哔哩伺服器，可能是哔哩哔哩伺服器崩潰。"
+            "value" : "無法連接至远程伺服器，可能是远程伺服器崩潰。"
           }
         }
       }
@@ -6837,19 +6837,25 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili API Unavailable"
+            "value" : "Stream API Unavailable"
           }
         },
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili APIが利用できません"
+            "value" : "Stream APIが利用できません"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Bilibili API不可用"
+            "value" : "Stream API不可用"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Stream API不可用"
           }
         }
       }
@@ -7103,19 +7109,19 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Meowbili is up to date"
+            "value" : "Darock Stream is up to date"
           }
         },
         "ja" : {
           "stringUnit" : {
-            "state" : "translated",
+            "state" : "needs_review",
             "value" : "喵哩喵哩はすでに最新バージョンです。"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "喵哩喵哩已是最新版本"
+            "value" : "暗礁流媒体已是最新版本"
           }
         }
       }
